<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mastermind</string>
    <string name="action_settings">Settings</string>
    <string name="check">Check</string>
    <string name="new_game">New game</string>
    <string name="title_activity_settings">Settings</string>
    
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_number_of_attempts">Number of attempts</string>
    <string name="pref_number_of_attempts_summary">Set number of attempts</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    

</resources>