<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_user_profile" >
        <EditTextPreference
            android:key="prefUsername"
            android:summary="@string/pref_user_name_summary"
            android:title="@string/pref_user_name" />

        <ListPreference
            android:entries="@array/numberOfAttempts"
            android:entryValues="@array/numberOfAttemptValues"
            android:key="prefNumberOfAttempys"
            android:summary="@string/pref_number_of_attempts_summary"
            android:title="@string/pref_number_of_attempts" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" >
        </CheckBoxPreference>
    </PreferenceCategory>

</PreferenceScreen>